# data-science-portfolio

./: .gitignore  2016 General Election Poll Analysis.ipynb  3-Way Sentiment Analysis for Tweets.ipynb  911 Calls - Exploratory Analysis.ipynb  Cross Language Information Retrieval.ipynb  Finance Project .ipynb  LICENSE  Linear Regression - Project Exercise .ipynb  Logistic Regression Project .ipynb  ML with Support Vector Machines.ipynb  Machine Learning with Decision Trees and Random Forests.ipynb  Machine Learning with Logistic Regression.ipynb  NLP Project .ipynb  Plotly and Cufflinks.ipynb  Recommender Systems with Python.ipynb  SMS Spam Classification.ipynb  Stock Market Analysis for Tech Stocks.ipynb  Titanic Dataset - Exploratory Analysis.ipynb  Yelp Review Classification.ipynb  digit_recognition-mnist-sequence.ipynb  digit_recognition-mnist.ipynb  pyproject.toml  readme.md  requirements.txt
.github/: ci_execute.py
.ipynb_checkpoints/: 2016 General Election Poll Analysis-checkpoint.ipynb  3-Way Sentiment Analysis for Tweets-checkpoint.ipynb  911 Calls - Exploratory Analysis-checkpoint.ipynb  Cross Language Information Retrieval-checkpoint.ipynb  ML with Support Vector Machines-checkpoint.ipynb  Machine Learning with Decision Trees and Random Forests-checkpoint.ipynb  Machine Learning with Linear Regression-checkpoint.ipynb  Machine Learning with Logistic Regression-checkpoint.ipynb  Plotly and Cufflinks-checkpoint.ipynb  Recommender Systems with Python-checkpoint.ipynb  SMS Spam Classification-checkpoint.ipynb  Titanic Dataset - Exploratory Analysis.ipynb  (+2 more)
(+41 files in other folders)
